--- a/report-service.properties
+++ b/report-service.properties
@@ -1,11 +1,7 @@
 server.port=8083
 
-#container.name=business-logic-container
-container.name=localhost
-container.port=8082
-
 jwt.secret=secret
 
-spring.activemq.broker-url=tcp://localhost:61616
-spring.activemq.user=admin
-spring.activemq.password=admin
+#spring.activemq.broker-url=tcp://localhost:61616
+#spring.activemq.user=admin
+#spring.activemq.password=admin
