--- a/chat-service.properties
+++ b/chat-service.properties
@@ -9,9 +9,9 @@ server.port=8081
 
 jwt.secret=secret
 
-#spring.activemq.broker-url=tcp://localhost:61616
-#spring.activemq.user=admin
-#spring.activemq.password=admin
+spring.activemq.broker-url=tcp://localhost:61616
+spring.activemq.user=admin
+spring.activemq.password=admin
 
 spring.boot.admin.client.instance.management-base-url= http://localhost:8081
 spring.boot.admin.client.url=http://localhost:8087
