--- a/report-service.properties
+++ b/report-service.properties
@@ -2,6 +2,6 @@ server.port=8083
 
 jwt.secret=secret
 
-#spring.activemq.broker-url=tcp://localhost:61616
-#spring.activemq.user=admin
-#spring.activemq.password=admin
+spring.activemq.broker-url=tcp://localhost:61616
+spring.activemq.user=admin
+spring.activemq.password=admin
